Prevent title overflow

--- a/protected/sass/parts/_header.scss
+++ b/protected/sass/parts/_header.scss
@@ -29,7 +29,6 @@ header {
   #logo {
     margin:20px 0 5px;
     font-size: 2em;
-    white-space: nowrap;
     letter-spacing: .02em;
 
     a:hover {
